Release 3.6.0
=============

New features
------------

- On systems where the default encoding is not utf-8, converting
  R strings to Python can result in decoding errors. The default
  encoding is now the system's encoding (rather than assume utf-8).
  This may provide a fix to issue #1018.

Changes
-------

- `rpy2` is now a namespace package, with `rpy2-rinterface`
  (low-level interface close to R's C API) and `rpy2-robjects`
  (possible more-Pythonic high-level interface using the low-level
  interface) 2 packages on pypi installing into that namespace.
  The package `rpy2` remains on pypi as essentially a metapackage
  depending on `rpy2-rinterface` and `rpy2-robjects`.

- :mod:`rpy2.rlike.functional` is deprecated. The functions it
  provides proved of little use and can implemented in one line.
  It will be removed with :mod:`rpy2` 3.7.

- :class:`rpy2.rlike.collections.OrdDict` is deprecated.
  :class:`rpy2.rlike.collections.NamedList` is enough to have
  a Python data structure to represent R lists or paired lists.

- The long-deprecated functions
  :func:`rpy2.robjects.robjects.numpy2ri.activate`,
  :func:`rpy2.robjects.robjects.numpy2ri.deactivate`,
  :func:`rpy2.robjects.robjects.pandas2ri.activate`,
  and :func:`rpy2.robjects.robjects.pandas2ri.deactivate` are no
  longer functional. Calling them will raise an exception pointing
  to documentation.

- The wrapper for ggplot2 is now targeting the R package `ggplot2`
  version 3.5.

- The wrapper for dplyr is now targeting the R package `dplyr`
  version 1.1.

- The definition of `Rcomplex` from R's C-API was updated to match
  the definition in recent R release (>= 4.3) when rpy2 is in "API mode".
  This does not work with the "ABI mode" though, and the legacy
  definition of `Rcomplex` is still used with it.


Bugs fixed
----------

- Fix case of `zoneinfo.ZoneInfo` object missing the attribute `zone`.
  The attribute `key` is used instead. This fixes issue #1079.
